--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <title>Document</title>
+</head>
+<body>
+    <div class="game">
+        <div class="button" id="button1"></div>
+        <div class="button" id="button2"></div>
+        <div class="button" id="button3"></div>
+        <div class="button" id="button4"></div>
+    </div>
+    <button class="startbutton" id="start">start</button>
+</body>
+</html>
