--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="game">
-        <div class="button" id="button1"></div>
-        <div class="button" id="button2"></div>
-        <div class="button" id="button3"></div>
-        <div class="button" id="button4"></div>
+        <div class="button" id="button1">1</div>
+        <div class="button" id="button2">2</div>
+        <div class="button" id="button3">3</div>
+        <div class="button" id="button4">4</div>
     </div>
     <button class="startbutton" id="start">start</button>
 </body>
 </html>
+
